[tool.poetry]
name = "module-api"
version = "0.0.2"
description = "A set of API calls for Pharmaco-Net modules."
authors = ["Jonathan Willianto <jowillianto@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pypharmaco = {git = "https://github.com/calici/pypharmaco", rev = "v0.0.1"}
annotated-types = "^0.6.0"
certifi = "^2023.7.22"
charset-normalizer = "^3.3.2"
idna = "^3.4"
pydantic = "^2.4.2"
pytz = "^2023.3.post1"
pyyaml = "^6.0.1"
requests = "^2.31.0"
typing-extensions = "^4.8.0"
urllib3 = "^2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
